Improved call of method